--- a/app/src/main/res/layout/item_diet.xml
+++ b/app/src/main/res/layout/item_diet.xml
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:contentDescription="@string/favorite"
+            android:visibility="gone"
             android:src="@android:drawable/btn_star_big_off"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
