Fix : 세부 식단 페이지에서 음식 추가 안되는 현상 수정

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -36,6 +36,10 @@
             android:name="source"
             app:argType="string"
             android:defaultValue="navigation" />
+        <argument
+            android:name="currentDate"
+            app:argType="string"
+            android:defaultValue="" />
 
     </fragment>
 
@@ -73,6 +77,7 @@
                 android:name="source"
                 app:argType="string"
                 android:defaultValue="breakfast" />
+
         </action>
         <action
             android:id="@+id/action_mealDetailFragment_to_foodDetailFragment"
