--- a/app/src/main/res/layout/fragment_custom_add.xml
+++ b/app/src/main/res/layout/fragment_custom_add.xml
@@ -197,7 +197,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="30dp"
             android:background="@color/light_green"
-            android:text="Button"
+            android:text="저장하기"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
