--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -82,6 +82,7 @@
                         android:layout_marginStart="20dp"
                         android:gravity="center"
                         android:text='@{viewModel.dailyIntakeRecord.currentCalories + "\n" + "섭취량"}'
+                        android:textColor="@color/text_black"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/tvTargetCalories"
@@ -96,6 +97,7 @@
                         android:gravity="center"
                         android:maxLines="2"
                         android:text='@{viewModel.remainingCalories + "\n" + "잔여칼로리"}'
+                        android:textColor="@color/text_black"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +124,7 @@
                             android:layout_width="0dp"
                             android:layout_height="0dp"
                             android:indeterminate="false"
-                            android:max="@{viewModel.targetCalories}"
+                            android:max="@{viewModel.todayGoal.targetCalories}"
                             android:progress="@{viewModel.currentTotalCalories}"
                             android:progressDrawable="@drawable/circular_progress_bar"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -141,6 +143,7 @@
                         android:gravity="center"
                         android:maxLines="2"
                         android:text='@{viewModel.todayGoal.targetCalories + "\n목표칼로리"}'
+                        android:textColor="@color/text_black"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/remainingCalories"
@@ -174,6 +177,7 @@
                         android:layout_marginEnd="50dp"
                         android:gravity="center"
                         android:text="탄수화물"
+                        android:textColor="@color/text_black"
                         android:textSize="12dp"
                         app:layout_constraintBottom_toTopOf="@+id/carbProgressBar"
                         app:layout_constraintEnd_toStartOf="@+id/textView13"
@@ -190,6 +194,7 @@
                         android:layout_marginEnd="50dp"
                         android:gravity="center"
                         android:text='@{viewModel.dailyIntakeRecord.currentCarbs + "/" + viewModel.targetCarbIntake + "g"}'
+                        android:textColor="@color/text_black"
                         android:textSize="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/tvProtein"
@@ -220,6 +225,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="단백질"
+                        android:textColor="@color/text_black"
                         android:textSize="12dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/textView14"
@@ -233,6 +239,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text='@{viewModel.dailyIntakeRecord.currentProtein + "/" + viewModel.targetProteinIntake + "g"}'
+                        android:textColor="@color/text_black"
                         android:textSize="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/tvFat"
@@ -266,6 +273,7 @@
                         android:layout_marginEnd="20dp"
                         android:gravity="center"
                         android:text="지방"
+                        android:textColor="@color/text_black"
                         android:textSize="12dp"
                         app:layout_constraintBottom_toTopOf="@+id/fatProgressBar"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -281,6 +289,7 @@
                         android:layout_marginEnd="20dp"
                         android:gravity="center"
                         android:text='@{viewModel.dailyIntakeRecord.currentFat + "/" + viewModel.targetFatIntake + "g"}'
+                        android:textColor="@color/text_black"
                         android:textSize="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -324,7 +333,9 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginBottom="10dp"
                     android:text="오늘 하루 요약"
+                    android:textColor="@color/text_green"
                     android:textSize="16dp"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/todaySummarySection"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -345,6 +356,21 @@
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent" />
 
+                <TextView
+                    android:id="@+id/tvTodayDiet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="오늘의 식단"
+                    android:textColor="@color/text_green"
+                    android:textSize="16dp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/todayDietSection"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent" />
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/todayDietSection"
                     android:layout_width="0dp"
@@ -352,7 +378,9 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="100dp"
                     android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="100dp"
                     android:background="@drawable/border_section_white"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/todaySummarySection">
@@ -399,6 +427,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:text="아침"
+                            android:textColor="@color/text_black"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/ivBreakfast"
                             app:layout_constraintTop_toTopOf="parent"
@@ -635,73 +664,6 @@
                         app:layout_constraintStart_toEndOf="@+id/snackLayout"
                         app:layout_constraintTop_toBottomOf="@+id/view3"
                         app:srcCompat="@drawable/ic_plus" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <TextView
-                    android:id="@+id/tvTodayDiet"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="오늘의 식단"
-                    android:textSize="16dp"
-                    app:layout_constraintBottom_toTopOf="@+id/todayDietSection"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/myExerciseRoutineSection"
-                    android:layout_width="0dp"
-                    android:layout_height="200dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="100dp"
-                    android:layout_marginEnd="10dp"
-                    android:background="@drawable/border_section_white"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/todayDietSection">
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <TextView
-                    android:id="@+id/tvMyExerciseRoutine"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="나의 운동 루틴"
-                    app:layout_constraintBottom_toTopOf="@+id/myExerciseRoutineSection"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <TextView
-                    android:id="@+id/tvMyActivity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="나의 활동"
-                    app:layout_constraintBottom_toTopOf="@+id/myActivitySection"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/myActivitySection"
-                    android:layout_width="0dp"
-                    android:layout_height="200dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="100dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="150dp"
-                    android:background="@drawable/border_section_white"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/myExerciseRoutineSection">
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
