--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,9 +14,11 @@
     <color name="orange">#FF7F0E</color>
     <color name="progressbar_red">#ed6868</color>
     <color name="progressbar_green">#6cf096</color>
+    <color name="progressbar_blue">#477ed6</color>
+    <color name="progressbar_orange">#ffa938</color>
 
     <color name="text_green">#2ca332</color>
     <color name="text_black">#000000</color>
-    <color name="text_grey">#7f7f7f</color>
+    <color name="text_gray">#7f7f7f</color>
 
 </resources>
